<!--
  ~ Copyright 2017, Peter Vincent
  ~ Licensed under the Apache License, Version 2.0, Vin Budget.
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing,
  ~ software distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Wallet</string>
    <string name="string_activity_login">Log In</string>
    <string name="string_activity_main">@string/app_name</string>
    <string name="action_settings">Settings</string>
    <string name="balance">Balance</string>
    <string name="graph">Recent Usages</string>
    <string name="records">Records</string>
    <string name="string_activity_transaction">New Record</string>
    <string name="amount">KES 0</string>
    <string name="string_activity_settings">Settings</string>
    <string name="chart">Incomes verses Expenses</string>
    <string name="appwidget_text">@string/app_name</string>
    <string name="add_widget">Add widget</string>
    <string name="pin">pin</string>
    <string name="string_activity_details">Details</string>
    <string name="new_item">New Item ...</string>
    <string name="add">Add ...</string>
    <string name="more">More ...</string>
    <string name="reset">Reset</string>
    <string name="string_activity_maps">Map</string>
    <string name="item">Item</string>
    <string name="string_activity_settings1">Settings</string>
    <string name="no_limit_set">No limit set ...</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="invalid_time">Invalid Time ...</string>
    <string name="invalid_date">Invalid date...</string>
    <string name="view_more">View More ...</string>
    <string name="sortArray">
        <item>Sort</item>
        <item>Asc</item>
        <item>Dsc</item>
    </string>
    <string name="string_activity_main2">DashBoard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="include_account_balance">include account balance</string>
    <string name="all_records">all records</string>
    <string name="string_activity_eula">Terms and Conditions</string>
    <string name="string_activity_shopping_list">Shopping Lists</string>
    <string name="string_activity_help">Help</string>
    <string name="ad_unit_one">ca-app-pub-3021111099724641/2610649617</string>
    <string name="ad_unit_two">ca-app-pub-3021111099724641/6589943219</string>
    <string name="ad_big_id">ca-app-pub-3021111099724641/9543409612</string>
    <string name="string_activity_about">About</string>
    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="configure">Configure</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="action_delete">Delete</string>
    <string name="confirm_string">Confirm</string>
    <string name="confirm_delete_text">Do you want to delete this image?</string>
    <string name="answer_yes">Yes</string>
    <string name="answer_no">No</string>
    <string name="confirm_delete_multiple_text">
        Do you want to delete the selected images?
    </string>
    <string name="install_opencv">Install OpenCV Manager</string>
    <string name="confirm_install_opencv">
        Do you want to download OpenCV Manager from GitHub
    </string>
    <string name="answer_cancel">Cancel</string>
    <string name="downloading">Downloading</string>
    <string name="downloading_opencv">
        Downloading OpenCV Manager
    </string>
    <string name="colorMode">Color Mode</string>
    <string name="bwMode"><![CDATA[B&W mode]]></string>
    <string name="autoMode">Automatic Mode</string>
    <string name="manualMode">Manual Mode</string>
    <string name="settings">Settings</string>
    <string name="basic_settings">Basic Settings</string>
    <string name="answer_later">Later</string>
    <string name="ask_install_opencv">In order to work,
        Personal Budget needs the services of OpenCV Manager,
        which is not installed yet.
    </string>
    <string name="googleplay">Google Play</string>
    <string name="githubdownload">Direct Download</string>
    <string name="activateunknown">Go to Settings</string>
    <string name="messageactivateunknown">Google Play is not available
        and Install from Unknown Sources is disabled,
        please go to Settings and activate it.
    </string>
    <string name="pages">Pages</string>
    <string name="modules">Modules</string>
    <string name="dashboard">Dashboard</string>
    <string name="analysis">Analysis</string>
    <string name="overview">Overview</string>
    <string name="shopping_lists">Shopping Lists</string>
    <string name="reports_amp_receipts"><![CDATA[Reports & Receipts]]></string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="content">Content</string>
    <string name="system">System</string>
    <string name="eula">EULA</string>
    <string name="credits">Credits</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="personal_expense_manager">Personal Expense Manager</string>
    <string name="income">INCOME</string>
    <string name="expense">EXPENSE</string>
    <string name="zero">0</string>
    <string name="expense_income_manager">Income/Expense Manager</string>
    <string name="account_ledger">Account Ledger</string>
    <string name="string_activity_new_item">NewItem</string>
    <string name="target">Target</string>
    <string name="saved">Saved</string>
    <string name="savings">Savings</string>
    <string name="notifications">Notifications</string>
    <string name="update_list">Update list</string>
    <string name="save_item">Save Item</string>
    <string name="add_new_item">Add New Item</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="no">No.</string>
    <string name="debits">Debits</string>
    <string name="current_balance">Current Balance</string>
    <string name="now">Now</string>
    <string name="template">Template</string>
    <string name="export_name">Export Name</string>
    <string name="basic">Basic</string>
    <string name="advanced">Advanced</string>
    <string name="type_of_records">Type of Records</string>
    <string name="all">All</string>
    <string name="incomes">Incomes</string>
    <string name="expenses">Expenses</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="format">Format</string>
    <string name="csv">CSV</string>
    <string name="xls">XLS</string>
    <string name="pdf">PDF</string>
    <string name="export">Export</string>
    <string name="title_activity_recurring_payments">RecurringPayments</string>
    <string name="title_activity_debts">Debts</string>
    <string name="debts">Debts</string>
    <string name="faq">FAQ</string>
    <string name="budgets">Budgets</string>
    <string name="rates_are_based_on_the_kenyan_currency_system">
        Rates are based on the kenyan currency system</string>
    <string name="budget">Budget</string>
    <string name="share">Share</string>
    <string-array name="currencies">
    </string-array>
    <string name="title_activity_budgets">Budgets</string>
    <string name="title_activity_assistant">Assistant</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="assistant">Assistant</string>
    <string name="charts">Charts</string>
    <string name="add_item">Add Item</string>
</resources>
