<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2017, Peter Vincent
  ~ Licensed under the Apache License, Version 2.0, Vin Budget.
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing,
  ~ software distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:title="@string/modules">
            <menu>
                <item
                    android:id="@+id/nav_camera"
                    android:icon="@drawable/ic_cart"
                    android:title="Camera" />
                <item
                    android:id="@+id/nav_shopping_list"
                    android:icon="@drawable/ic_cart"
                    android:title="@string/shopping_lists" />

                <item
                    android:id="@+id/nav_budget_list"
                    android:icon="@drawable/ic_cash"
                    android:title="@string/budgets" />

                <item
                    android:id="@+id/nav_debt_list"
                    android:icon="@drawable/ic_trending_down"
                    android:title="@string/debts"/>
            </menu>
        </item>
        <item
            android:title="@string/budget">
            <menu>

                <item
                    android:id="@+id/nav_records"
                    android:icon="@drawable/ic_data"
                    android:title="@string/records" />
                <item
                    android:id="@+id/nav_charts"
                    android:icon="@drawable/ic_chart_line"
                    android:title="@string/charts" />
                <item
                    android:id="@+id/nav_assistant"
                    android:icon="@drawable/ic_assistant"
                    android:title="@string/assistant" />

                <item
                    android:id="@+id/nav_report"
                    android:icon="@drawable/ic_content_save"
                    android:title="@string/reports_amp_receipts" />
            </menu>
        </item>
        <item android:title="@string/system">
            <menu>
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_cog"
                    android:title="@string/settings" />
                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_information"
                    android:title="@string/about" />
                <item android:id="@+id/nav_share"
                    android:icon="@drawable/ic_share_variant"
                    android:title="@string/share"/>
                <item
                    android:id="@+id/nav_faqs"
                    android:icon="@drawable/ic_help"
                    android:title="@string/faq" />
            </menu>
        </item>
    </group>
</menu>
